[package]
name = "diss"
version = "0.2.3"
authors = ["yazgoo"]
description = "dissociate program from your terminal"
documentation = "https://docs.rs/diss"
homepage = "https://github.com/yazgoo/diss"
repository = "https://github.com/yazgoo/diss"
readme  = "README.md"
keywords = ["util"]
license = "MIT"
edition = "2018"

[dependencies]
nix = "0.25"
anyhow = "1.0"
termion = "2"
pty = "0.2"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
signal-hook = "0.3" 
daemonize = "0.4"
clap = { version = "3.2", features = ["derive"] }
dirs = "4"
timeout-readwrite = "0.3"
rand = "0.8"
whoami = "1.2"
