[package]
name = "diss"
version = "0.2.10"
authors = ["yazgoo"]
description = "dissociate program from your terminal"
documentation = "https://docs.rs/diss"
homepage = "https://github.com/yazgoo/diss"
repository = "https://github.com/yazgoo/diss"
readme  = "README.md"
keywords = ["util"]
license = "MIT"
edition = "2018"

[dependencies]
nix = { version = "0.27", features = ["signal"] }
anyhow = "1.0"
termion = "2"
pty-process = "0.3"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
signal-hook = "0.3" 
daemonize = "0.5.0"
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
timeout-readwrite = "0.3"
rand = "0.8"
whoami = "1.2"
log = "0.4"
log-derive = "0.4"
fern = "0.6"
